# satnogs-db

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .pylintrc3  .yapfignore  Dockerfile  README.md  docker-compose.yml  env-dist  gulpfile.js  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
auth0login/: auth0backend.py
contrib/: refresh-requirements.sh
db/: __init__.py  _version.py  celery.py  settings.py  urls.py  wsgi.py
db/api/: filters.py  generators.py  renderers.py  serializers.py  tests.py  urls.py  views.py
db/base/: admin.py  context_processors.py  forms.py  helpers.py  models.py  signals.py  structured_data.py  tasks.py  tests.py  urls.py  utils.py  views.py
db/base/decoders/: ax25_frames.py  ax25frames.py  cas4.py  elfin.py  elfin_pp.py  siriussat.py  us6.py
db/base/fixtures/: modes.json  satellites.json  telemetries.json  transmitters.json
db/base/migrations/: 0004_auto_20181215_1130.py  0007_transmitter_rename.py  0008_transmitter_model_change.py
db/base/templatetags/: tags.py
db/static/css/: app.css  newapp.css
db/static/js/: app.js  map.js  satellite.js  satellites.js  stats.js  transmitter_modal.js  transmitters-chart.js  (+1 more)
db/templates/: 404.html  500.html  base.html
docker/: dev
docs/: api.rst  conf.py  developer-guide.rst  index.rst  installation-docker.rst  installation-virtualenv.rst  maintenance.rst
requirements/: dev.txt  production.txt
satnogs-db-api-client/: openapi-generator-config.json  setup.cfg
satnogs-db-api-client/satnogsdbapiclient/: _version.py
(+25 files in other folders)
