[metadata]
name = satnogs-db
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-db
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Communications :: Ham Radio
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = SatNOGS DB

[options]
packages = find:
include_package_data = True

[flake8]
max-complexity = 23
max-line-length = 99
ignore = F403
exclude = *migrations/*,docs,*decoders/*

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = db/_version.py
versionfile_build = db/_version.py
tag_prefix =
parentdir_prefix =
